<resources>
    <string name="app_name">SegundaProva</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="genero">Genero</string>
    <string name="nome_do_diretor">nome do diretor</string>
    <string name="genero_do_filme">Genero do filme</string>
    <string name="nome_do_filme">Nome do filme</string>
    <string name="nome">Nome:</string>
    <string name="lan_amento">Lançamento</string>
    <string name="ano_do_filme">Ano do filme</string>
    <string name="dura_o">Duração</string>
    <string name="diretor">Diretor</string>
    <string name="nota">Nota</string>
    <string name="ex_1_34">ex: 1.34</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="ano">ano</string>
    <string name="todo">TODO</string>
    <string name="cadastrar_filme">Cadastrar Filme</string>
    <string name="sobre">Sobre</string>
    <string name="descri_o">Descrição</string>
    <string name="name">Name</string>
    <string name="g_nero">Gênero:</string>
</resources>