<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="tads.eaj.ufrn.segundaprovajoaogabriel.viewmodel.CadastraViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:orientation="vertical"
        tools:context=".Fragments.CadastraFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/nome"
            android:textColor="#0D47A1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/movieName"
            app:layout_constraintEnd_toStartOf="@+id/movieName"
            app:layout_constraintHorizontal_bias="0.63"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movieName"
            app:layout_constraintVertical_bias="0.523" />

        <EditText
            android:id="@+id/movieName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/nome_do_filme"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={viewmodel.name}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.65"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/GeneroName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/genero_do_filme"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={viewmodel.genre}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/movieName"
            app:layout_constraintStart_toStartOf="@+id/movieName"
            app:layout_constraintTop_toBottomOf="@+id/movieName" />

        <EditText
            android:id="@+id/DiretorMovie"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/nome_do_diretor"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:text="@={viewmodel.director}"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/textView6"
            app:layout_constraintHorizontal_bias="0.406"
            app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="Gênero:"
            android:textColor="#0D47A1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/GeneroName"
            app:layout_constraintEnd_toStartOf="@+id/GeneroName"
            app:layout_constraintHorizontal_bias="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/GeneroName" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:text="@string/lan_amento"
            android:textColor="#0D47A1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/GeneroName" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:text="@string/diretor"
            android:textColor="#0D47A1"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/GeneroName"
            app:layout_constraintTop_toBottomOf="@+id/GeneroName" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/nota"
            android:textColor="#0D47A1"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/editTextTextPersonName"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <RatingBar
            android:id="@+id/notaMovie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="#FFFFFF"
            android:max="5"
            android:numStars="5"
            android:rating="@={viewmodel.rating}"
            app:layout_constraintEnd_toEndOf="@+id/textView7"
            app:layout_constraintStart_toStartOf="@+id/textView7"
            app:layout_constraintTop_toBottomOf="@+id/textView7" />

        <EditText
            android:id="@+id/AnoMovie"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/ano"
            android:inputType="number"
            android:text="@={viewmodel.yearRelease}"
            android:textAlignment="center"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <Button
            android:id="@+id/ConfirmaButton"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/salvar"
            app:backgroundTint="#01579B"
            app:layout_constraintStart_toStartOf="@+id/notaMovie"
            app:layout_constraintTop_toBottomOf="@+id/notaMovie" />

        <Button
            android:id="@+id/CancelarButton"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/cancelar"
            app:backgroundTint="#01579B"
            app:layout_constraintEnd_toEndOf="@+id/notaMovie"
            app:layout_constraintTop_toBottomOf="@+id/notaMovie" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="230dp"
            android:text="@string/descri_o"
            android:textColor="#01579B"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@={viewmodel.description}"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>